# op_result

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: test.yml
src/: lib.rs  op_result.rs  output.rs  utils.rs
tests/: test_defined.rs  test_nested.rs  test_output.rs
